[tool.poetry]
name = "model-quantization"
version = "0.1.0"
description = ""
authors = ["Tse-Ju, Lin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.36.2"
torch = "^2.1.2"
onnxruntime = "1.16.1"
portalocker = "^2.8.2"
onnx = "^1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
